--- a/KSEconomics.plist
+++ b/KSEconomics.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://58.215.18.176:8089/downApp/download/KSEconomics.ipa</string>
+					<string>http://172.16.9.121:8899/SpaceBIA.Case.KS.Economy.API/Mobile/Ios/KSEconomics.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
